fixed tumblr date and content height on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,7 @@ h6{
 	text-align: center;
 	font-size: 12px;
 	padding-top: 15px;
+	color: #999;
 }
 .post-caption{
 	padding: 0px 50px;
